# Flask-PDF-to-Text-from-Link

./: .replit  camelot.md  getPdfUrl.py  main.py  pdf_processor.py  pyproject.toml  readme.md
static/: script.js  styles.css
templates/: index.html
